third_party/WebKit/Source/core/css/BinaryDataFontFaceSource.h
@@ -6,7 +6,7 @@
 #define BinaryDataFontFaceSource_h
 
 #include "core/css/CSSFontFaceSource.h"
-#include <memory>
+#include "wtf/RefPtr.h"
 
 namespace blink {
 
@@ -22,7 +22,7 @@ class BinaryDataFontFaceSource final : public CSSFontFaceSource {
  private:
   PassRefPtr<SimpleFontData> createFontData(const FontDescription&) override;
 
-  std::unique_ptr<FontCustomPlatformData> m_customPlatformData;
+  RefPtr<FontCustomPlatformData> m_customPlatformData;
 };
 
 }  // namespace blink
